--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     -ms-flex-align: center;
     align-items: center;
-    background: url("../images/bg.jpg");
+    background: url("../images/Unsplash-BG.jpeg");
     background-size: cover;
     flex-wrap: wrap;
 }
