--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,8 +12,10 @@
 
 {{ if .Site.RSSLink }}<link rel="alternate" href="{{ .Site.RSSLink }}" type="application/rss+xml" title="{{ .Site.Title }}"/>{{ end }}
 
+<script src="https://kit.fontawesome.com/7949275bdf.js" crossorigin="anonymous"></script>
+
 {{ $cssbootstrap := resources.Get "/css/bootstrap.min.css" }}
-{{ $cssfontawesome := resources.Get "/css/fontawesome-free-5.13.0-web-all.min.css" }}
+{{/*  {{ $cssfontawesome := resources.Get "/css/fontawesome-free-5.13.0-web-all.min.css" }}  */}}
 {{ $cssmain := resources.Get "/css/main.css" }}
-{{ $allcss := slice $cssbootstrap $cssfontawesome $cssmain | resources.Concat "/css/vendor.css" | minify | fingerprint }}
+{{ $allcss := slice $cssbootstrap $cssmain | resources.Concat "/css/vendor.css" | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $allcss.RelPermalink }}" integrity="{{ $allcss.Data.Integrity }}">    
